--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -1,6 +1,4 @@
 .App {
-  max-width: 70rem;
-  margin: 0 auto;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -20,6 +18,12 @@
   font-size: 1.5rem;
   padding: 1rem;
   text-decoration: none;
+}
+
+.App-frame {
+  width: 100%;
+  max-width: 70rem;
+  margin: 0 auto;
 }
 
 .App-content {
