--- a/styles/globals.css
+++ b/styles/globals.css
@@ -36,7 +36,8 @@ body {
   --bg: var(--white);
   --color: var(--black);
   --accent: var(--dark-pink);
-  --code-bg: var(--white);
+  --accent-alt: var(--dark-blue);
+  --code-bg: var(--light-gray);
   --blockquote-line: var(--accent);
 
   /* code syntax highlight */
@@ -56,7 +57,8 @@ body {
   /* website settings */
   --bg: var(--blacker-than-black);
   --color: var(--light-gray);
-  --accent: var(--light-teal);
+  --accent: var(--light-pink);
+  --accent-alt: var(--light-blue);
   --code-bg: var(--black);
   --blockquote-line: var(--accent);
 
