--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,6 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 .theme-snazzy {
@@ -57,8 +55,8 @@ body {
   /* website settings */
   --bg: var(--blacker-than-black);
   --color: var(--light-gray);
-  --accent: var(--light-pink);
-  --accent-alt: var(--light-blue);
+  --accent: var(--light-blue);
+  --accent-alt: var(--light-pink);
   --code-bg: var(--black);
   --blockquote-line: var(--accent);
 
